Starting to add parts of the PBS backend code to the backends.py

--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -5,7 +5,11 @@ HeartBeat = 1
 
 [PBS]
 Command = qsub
+Setup = Melbourne-PBS
 
 [TESTS]
 TestList = ["a","1",2,3,[4,"5"]]
 TestInt = 3
+
+[Melbourne-PBS]
+Queue = short
