Update libraries in generator package
fixed the output of

    $ setoption debug
    $ scons --check-extra-libraries --check-missing-libraries generators
    LIB_EXTRA:generators:libgenerators.so -> libframework_io.so (dependency not needed and can be removed from SConscript)
    LIB_EXTRA:generators:libgenerators_babayaganlo.so -> libgenerators.so (dependency not needed and can be removed from SConscript)
    LIB_MISSING:generators:libgenerators_phokhara.so -> libeemmg5.so (library needed directly, please add to SConscript)
    LIB_MISSING:generators:libgenerators_phokhara.so -> libeemmgisr.so (library needed directly, please add to SConscript)
    LIB_MISSING:generators:libgenerators_phokhara.so -> libeemmgisrfsr.so (library needed directly, please add to SConscript)

by removing extra libraries and changing libeemmg5 to eemmg5 and so
forth which brought two additional extra links. removed those too and
created issue BII-1668 to fix finding libraries which start with "lib"
in SConscript files.

--- a/generators/phokhara/SConscript
+++ b/generators/phokhara/SConscript
@@ -3,6 +3,6 @@ import os
 Import('env')
 
 env['SUBLIB'] = True
-env['LIBS'] = ['$ROOT_LIBS', 'mdst_dataobjects', 'framework', 'libeemmgisr', 'libeemmgisrfsr', 'libeemmg5', 'libqcdloop1', 'libpjfry', 'gfortran']
+env['LIBS'] = ['$ROOT_LIBS', 'mdst_dataobjects', 'framework', 'eemmgisr', 'eemmgisrfsr', 'eemmg5', 'gfortran']
 
 Return('env')
