--- a/hlt/hlt/modules/level3/SConscript
+++ b/hlt/hlt/modules/level3/SConscript
@@ -2,6 +2,6 @@ Import('env')
 
 # env['CONTINUE'] = False
 
-env['LIBS'] = ['framework', 'ecl', 'cdc', 'mdst_dataobjects', 'cdc_dataobjects', 'ecl_dataobjects', 'skim_hlt_dataobjects']
+env['LIBS'] = ['framework', 'ecl', 'cdc', 'mdst_dataobjects', 'cdc_dataobjects', 'ecl_dataobjects', 'hlt_hlt_dataobjects']
 
 Return('env')
