--- a/hlt/hlt/modules/physicstrigger/SConscript
+++ b/hlt/hlt/modules/physicstrigger/SConscript
@@ -2,6 +2,6 @@ Import('env')
 
 # env['CONTINUE'] = False
 
-env['LIBS'] = ['framework','mdst_dataobjects','analysis', 'analysis_dataobjects','skim_hlt_dataobjects']
+env['LIBS'] = ['framework','mdst_dataobjects','analysis', 'analysis_dataobjects','hlt_hlt_dataobjects']
 
 Return('env')
