--- a/hlt/softwaretrigger/dbobjects/tests/SConscript
+++ b/hlt/softwaretrigger/dbobjects/tests/SConscript
@@ -4,9 +4,9 @@
 Import('env')
 
 env['LIBS'] = [
-    'skim',
+    'hlt',
     'framework',
-    'skim_softwaretrigger_dbobjects'
+    'hlt_softwaretrigger_dbobjects'
     ]
 
 Return('env')
