basf2 setup for PBS submission now configurable from user config files or steering files.

--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -4,12 +4,9 @@ ResultsDir = calibration_results
 HeartBeat = 1
 
 [PBS]
-Command = qsub
-Setup = Melbourne-PBS
+Queue = short
+Release = /cvmfs/belle.cern.ch/releases/release-00-07-01
 
 [TESTS]
 TestList = ["a","1",2,3,[4,"5"]]
 TestInt = 3
-
-[Melbourne-PBS]
-Queue = short
