--- a/arich/dbobjects/SConscript
+++ b/arich/dbobjects/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 	
-env['LIBS'] = ['$ROOT_LIBS', 'framework']
-env['SUBLIB'] = True
+env['LIBS'] = ['framework', 'geometry', 'geometry_dbobjects', '$ROOT_LIBS']
 
 Return('env')
