--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -1,10 +1,14 @@
 [CAF_DEFAULTS]
 MaxIterations = 5
 ResultsDir = calibration_results
-HeartBeat = 1
+HeartBeat = 15
 
 [PBS]
 Queue = short
+Release = /cvmfs/belle.cern.ch/sl6/releases/build-2016-09-09
+
+[LSF]
+Queue = s
 Release = /cvmfs/belle.cern.ch/sl6/releases/build-2016-09-09
 
 [TESTS]
