--- a/mva/SConscript
+++ b/mva/SConscript
@@ -4,8 +4,8 @@ env.ParseConfig("python3 -c 'import numpy; print(\"-I%s\" % numpy.get_include())
 
 env['LIBS'] = ['framework', 'framework_io', 'mva_dataobjects', 'boost_program_options', '$ROOT_LIBS', 'fann', 'libFastBDT_shared']
 
-#env.Append(LIBS = ['NeuroBayesExpertCPP'])
-#env.Append(LIBS = ['NeuroBayesTeacherCPP'])
+env.Append(LIBS = ['NeuroBayesExpertCPP'])
+env.Append(LIBS = ['NeuroBayesTeacherCPP'])
 env.Append(LIBS = ['TMVA','MLP','XMLIO'])
 
 Return('env')
