--- a/tracking/trackFindingCDC/SConscript
+++ b/tracking/trackFindingCDC/SConscript
@@ -11,6 +11,7 @@ env['LIBS'] = [
     'mdst_dataobjects',
     'geometry',
     'cdc', 'cdc_dataobjects',
+    "mva",
     'framework',
     'genfit2',
     '$ROOT_LIBS',
