Bugfix in default PBS tools setup location

--- a/calibration/data/caf.cfg
+++ b/calibration/data/caf.cfg
@@ -6,7 +6,7 @@ HeartBeat = 15
 [PBS]
 Queue = short
 Release = /cvmfs/belle.cern.ch/sl6/releases/build-2016-09-09
-Tools = /cvmfs/belle.cern.ch/sl6/tools/
+Tools = /cvmfs/belle.cern.ch/sl6/tools/setup_belle2
 
 [LSF]
 Queue = s
