Fix extra links.

--- a/cdc/modules/cdcPacker/SConscript
+++ b/cdc/modules/cdcPacker/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['rawdata_dataobjects', 'rawdata', 'cdc_dataobjects', 'framework', '$ROOT_LIBS']
+env['LIBS'] = ['rawdata_dataobjects', 'cdc_dataobjects', 'framework', '$ROOT_LIBS']
 
 Return('env')
