--- a/cdc/SConscript
+++ b/cdc/SConscript
@@ -2,8 +2,7 @@ Import('env')
 
 env['LIBS'] = ['framework', 'geometry', 'simulation',
                '$ROOT_LIBS', 'Geom', 'EG', 'cdc_dataobjects',
-               '$GEANT4_LIBS', 'CLHEP',
-	       'simulation_dataobjects','mdst_dataobjects']
+               '$GEANT4_LIBS', 'CLHEP', 'mdst_dataobjects']
 
 #env.Append(CPPDEFINES = {'CDC_DEBUG':None})
 
