--- a/cdc/modules/cdcCRTest/SConscript
+++ b/cdc/modules/cdcCRTest/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'cdc', 'cdc_dataobjects', 'genfit2','tracking_dataobjects', 'mdst_dataobjects', 'vxd', 'vxd_dataobjects', 'pxd_dataobjects', 'svd_dataobjects']
+env['LIBS'] = ['framework', 'cdc', 'cdc_dataobjects', 'genfit2','tracking_dataobjects', 'mdst_dataobjects']
 
 Return('env')
