--- a/cdc/modules/cdcDigitizer/SConscript
+++ b/cdc/modules/cdcDigitizer/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['cdc', 'framework','cdc_dataobjects','simulation_dataobjects',
+env['LIBS'] = ['cdc', 'framework','cdc_dataobjects',
 	      'mdst_dataobjects','$ROOT_LIBS']
 
 Return('env')
