Removed unneccessary include statements and library link.

--- a/analysis/modules/ECLClusterInfo/SConscript
+++ b/analysis/modules/ECLClusterInfo/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', 'analysis_DecayDescriptor']
+env['LIBS'] = ['framework', 'mdst_dataobjects']
 
 Return('env')
 
