--- a/analysis/modules/MCMatcherParticles/SConscript
+++ b/analysis/modules/MCMatcherParticles/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['analysis', 'framework', 'analysis_dataobjects', 'mdst_dataobjects', 'analysis_utility']
+env['LIBS'] = ['framework', 'analysis_dataobjects', 'mdst_dataobjects', 'analysis_utility']
 
 Return('env')
 
