Removed extra libraries and include statement.

--- a/analysis/modules/ParticleCopier/SConscript
+++ b/analysis/modules/ParticleCopier/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_DecayDescriptor', 'analysis', 'analysis_utility']
+env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_utility']
 
 Return('env')
