--- a/analysis/modules/ParticleVertexFitter/SConscript
+++ b/analysis/modules/ParticleVertexFitter/SConscript
@@ -1,7 +1,7 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_KFit', 
-	      'analysis_raveInterface', 'analysis_DecayDescriptor', 'mdst_dataobjects',
-	      'analysis', 'genfit2', 'RaveBase', '$ROOT_LIBS', 'CLHEP']
+	      'analysis_raveInterface', 'analysis_DecayDescriptor',
+	      'analysis_utility', '$ROOT_LIBS', 'CLHEP']
 
 Return('env')
