Removed extra library and added missing one.

--- a/analysis/modules/TagVertex/SConscript
+++ b/analysis/modules/TagVertex/SConscript
@@ -1,6 +1,7 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'analysis', 'analysis_dataobjects', 'analysis_raveInterface',
-               'mdst_dataobjects', 'genfit2', 'RaveBase', '$ROOT_LIBS', 'CLHEP']
+               'analysis_utility', 'mdst_dataobjects', 'RaveBase', 
+	       '$ROOT_LIBS', 'CLHEP']
 
 Return('env')
