--- a/analysis/NtupleTools/SConscript
+++ b/analysis/NtupleTools/SConscript
@@ -3,20 +3,18 @@ env['SUBLIB'] = True
 env['LIBS'] = [
        	      'framework', 
 	      	  'analysis',
+	      	  'analysis_utility',
 	          'analysis_dataobjects',
 	          'analysis_DecayDescriptor', 
 	          'arich_dataobjects',
-              'bklm_dataobjects',
               'cdc_dataobjects',
               'ecl_dataobjects',
               'eklm_dataobjects',
               'mdst_dataobjects',
               'reconstruction_dataobjects',
               'top_dataobjects',
-              'vxd_dataobjects',
 	      'pxd_dataobjects',
 	      'svd_dataobjects',
-	      'simulation_dataobjects',
 	          'genfit2',
               'hlt_L1Emulator_dataobjects'
 	          ]
