Reset PACKAGE var for test_main
Previously scons would use the last package scanned for these,
resulting in unnecessary rebuilds when e.g. running 'scons framework'
after 'scons'

--- a/site_scons/SConstruct
+++ b/site_scons/SConstruct
@@ -264,6 +264,8 @@ else:
             global_env['PACKAGE'] = entry
 
             global_env.ProcessDirectory(entry, False, repository)
+    # for global things (e.g. tests) no package should be set
+    del global_env['PACKAGE']
 
 
 # build global dataobjects library
