--- a/eklm/modules/EKLMADC/SConscript
+++ b/eklm/modules/EKLMADC/SConscript
@@ -1,7 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', 'eklm_dbobjects',
-               'simulation_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['eklm', 'framework', 'eklm_dbobjects', '$ROOT_LIBS']
 
 Return('env')
 
