--- a/eklm/modules/EKLMDigitizer/SConscript
+++ b/eklm/modules/EKLMDigitizer/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', 'eklm_dbobjects',
-               'simulation_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', '$ROOT_LIBS']
 
 Return('env')
