--- a/eklm/modules/EKLMReconstructor/SConscript
+++ b/eklm/modules/EKLMReconstructor/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
 env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', 'eklm_dbobjects',
-               'simulation_dataobjects', '$ROOT_LIBS']
+               '$ROOT_LIBS']
 
 Return('env')
