--- a/eklm/SConscript
+++ b/eklm/SConscript
@@ -3,6 +3,6 @@ Import('env')
 env['LIBS'] = ['eklm_dataobjects', 'eklm_dbobjects', 'framework', 'geometry',
                'simulation', 'mdst_dataobjects',
                'calibration', 'calibration_dataobjects',
-               'alignment_dataobjects', '$ROOT_LIBS', 'libMinuit', 'Geom']
+               'alignment_dataobjects', '$ROOT_LIBS', 'Geom']
 
 Return('env')
