--- a/display/SConscript
+++ b/display/SConscript
@@ -5,8 +5,8 @@ if env.has_key('HAS_TEVE'):
     print "Event display disabled, please recompile root with opengl support (on Debian/Ubuntu you'll probably only need to install libglu1-mesa-dev and rebuild)"
 
   env['CONTINUE'] = env['HAS_TEVE']
-  env['LIBS'] = ['$ROOT_LIBS', 'GuiHtml', 'framework', 'geometry', 'tracking',
-                 'vxd', 'vxd_dataobjects', 'pxd_dataobjects', 'svd_dataobjects', 'svd', 'cdc_dataobjects',
+  env['LIBS'] = ['$ROOT_LIBS', 'GuiHtml', 'framework', 'geometry',
+                 'vxd', 'pxd_dataobjects', 'svd_dataobjects', 'svd', 'cdc_dataobjects',
                  'cdc', 'bklm_dataobjects', 'mdst_dataobjects', 'eklm_dataobjects',
                  'simulation_dataobjects', 'tracking_dataobjects',
                  'genfit2'] + env['TEVE_LIBS']
