--- a/display/modules/display/SConscript
+++ b/display/modules/display/SConscript
@@ -3,7 +3,7 @@ Import('env')
 env['LIBS'] = ['$ROOT_LIBS', 'display', 'framework', 'geometry',
                'tracking', 'vxd',
                'bklm_dataobjects', 'mdst_dataobjects', 'eklm_dataobjects',
-               'vxd_dataobjects', 'pxd_dataobjects', 'svd_dataobjects', 'cdc_dataobjects',
+               'pxd_dataobjects', 'svd_dataobjects', 'cdc_dataobjects',
                'simulation_dataobjects', 'tracking_dataobjects',
                'genfit2']
 
