--- a/structure/SConscript
+++ b/structure/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'geometry',
+env['LIBS'] = ['framework', 'geometry', 'structure_dbobjects',
                '$ROOT_LIBS', 'Geom']
 
 Return('env')
