--- a/eklm/SConscript
+++ b/eklm/SConscript
@@ -2,7 +2,6 @@ Import('env')
 
 env['LIBS'] = ['eklm_dataobjects', 'eklm_dbobjects', 'framework', 'geometry',
                'simulation', 'mdst_dataobjects',
-               'calibration', 'calibration_dataobjects',
-               'alignment_dataobjects', '$ROOT_LIBS', 'Geom']
+               'calibration', 'calibration_dataobjects', '$ROOT_LIBS', 'Geom']
 
 Return('env')
