--- a/bklm/SConscript
+++ b/bklm/SConscript
@@ -1,7 +1,7 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'geometry', 'simulation', 'bklm_dataobjects', 'bklm_dbobjects',
-               'simulation_dataobjects', 'mdst_dataobjects',
+               'mdst_dataobjects',
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
 Return('env')
