--- a/bklm/modules/bklmEffnRadio/SConscript
+++ b/bklm/modules/bklmEffnRadio/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'bklm', 'bklm_dataobjects', 'bklm_dbobjects',
+env['LIBS'] = ['framework', 'bklm', 'bklm_dataobjects', ### 'bklm_dbobjects',
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
 Return('env')
