--- a/cdc/modules/cdcCosmicAnalysis/SConscript
+++ b/cdc/modules/cdcCosmicAnalysis/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework',  'genfit2','tracking_dataobjects', 'mdst_dataobjects']
+env['LIBS'] = ['framework', 'tracking_dataobjects', 'mdst_dataobjects']
 
 Return('env')
