--- a/analysis/modules/ParticleVertexFitter/SConscript
+++ b/analysis/modules/ParticleVertexFitter/SConscript
@@ -2,6 +2,6 @@ Import('env')
 
 env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_KFit', 
 	      'analysis_raveInterface', 'analysis_DecayDescriptor',
-	      'analysis_utility', '$ROOT_LIBS', 'CLHEP']
+	      'analysis_utility', '$ROOT_LIBS', 'CLHEP','genfit2']
 
 Return('env')
