--- a/analysis/tests/SConscript
+++ b/analysis/tests/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', '$ROOT_LIBS', 'analysis', 'analysis_dataobjects', 'mdst_dataobjects', 'analysis_ParticleCombiner', 'analysis_TMVAMockPluginInspector', 'analysis_TMVAMockPlugin', 'analysis_DecayDescriptor', 'analysis_ContinuumSuppression']
+env['LIBS'] = ['framework', '$ROOT_LIBS', 'analysis', 'analysis_dataobjects', 'mdst_dataobjects', 'analysis_utility', 'analysis_ParticleCombiner', 'analysis_TMVAMockPluginInspector', 'analysis_TMVAMockPlugin', 'analysis_DecayDescriptor', 'analysis_ContinuumSuppression']
 
 Return('env')
