--- a/reconstruction/modules/HitLevelInfoWriter/SConscript
+++ b/reconstruction/modules/HitLevelInfoWriter/SConscript
@@ -1,4 +1,4 @@
 Import('env')
-env['LIBS'] = ['$ROOT_LIBS', 'framework', 'reconstruction_dataobjects', 'genfit2', 'mdst_dataobjects']
+env['LIBS'] = ['$ROOT_LIBS', 'framework', 'reconstruction_dataobjects', 'mdst_dataobjects']
 Return('env')
 
