--- a/reconstruction/modules/KlId/DataWriter/SConscript
+++ b/reconstruction/modules/KlId/DataWriter/SConscript
@@ -1,4 +1,4 @@
 Import('env')
-env['LIBS'] = ['$ROOT_LIBS', 'framework', 'genfit2', 'tracking_dataobjects', 'mdst_dataobjects', 'cdc_dataobjects','pxd_dataobjects','svd_dataobjects','vxd_dataobjects','reconstruction_dataobjects','analysis']
+env['LIBS'] = ['$ROOT_LIBS', 'framework', 'genfit2', 'tracking_dataobjects', 'mdst_dataobjects']
 Return('env')
 
