--- a/reconstruction/modules/KlId/ECLExpert/SConscript
+++ b/reconstruction/modules/KlId/ECLExpert/SConscript
@@ -1,4 +1,4 @@
 Import('env')
-env['LIBS'] = ['$ROOT_LIBS', 'mva', 'framework', 'reconstruction_dataobjects', 'genfit2', 'mdst_dataobjects', 'tracking_dataobjects','analysis','cdc_dataobjects','mva_dataobjects']
+env['LIBS'] = ['$ROOT_LIBS', 'mva', 'framework', 'reconstruction_dataobjects', 'genfit2', 'mdst_dataobjects', 'tracking_dataobjects', 'mva_dataobjects']
 Return('env')
 
