--- a/reconstruction/modules/KlId/KLMExpert/SConscript
+++ b/reconstruction/modules/KlId/KLMExpert/SConscript
@@ -1,4 +1,4 @@
 Import('env')
 env['LIBS'] = ['$ROOT_LIBS', 'mva', 'framework', 'reconstruction_dataobjects',
-               'genfit2', 'tracking_dataobjects', 'mdst_dataobjects','analysis','cdc_dataobjects','mva_dataobjects']
+               'genfit2', 'tracking_dataobjects', 'mdst_dataobjects', 'mva_dataobjects']
 Return('env')
