--- a/reconstruction/modules/VXDDedxPID/SConscript
+++ b/reconstruction/modules/VXDDedxPID/SConscript
@@ -1,3 +1,3 @@
 Import('env')
-env['LIBS'] = ['$ROOT_LIBS', 'framework', 'reconstruction_dataobjects', 'genfit2', 'vxd', 'mdst_dataobjects', 'geometry', 'vxd_dataobjects', 'pxd_dataobjects', 'svd_dataobjects', 'tracking_dataobjects', 'cdc_dataobjects']
+env['LIBS'] = ['$ROOT_LIBS', 'framework', 'reconstruction_dataobjects', 'genfit2', 'vxd', 'mdst_dataobjects', 'pxd_dataobjects', 'svd_dataobjects', 'tracking_dataobjects']
 Return('env')
