--- a/eklm/modules/EKLMRawPacker/SConscript
+++ b/eklm/modules/EKLMRawPacker/SConscript
@@ -1,8 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['eklm', 'framework', 'rawdata', 'rawdata_dataobjects', 'eklm_dataobjects', 'eklm_dbobjects',
-               'simulation_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'rawdata_dataobjects', 'eklm_dataobjects',
+               '$ROOT_LIBS']
 
 Return('env')
-
-
