--- a/background/dataobjects/SConscript
+++ b/background/dataobjects/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'simulation_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['$ROOT_LIBS']
 
 Return('env')
 
