--- a/background/modules/BGOverlayInput/SConscript
+++ b/background/modules/BGOverlayInput/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'framework_io', 'background_dataobjects',
-               'simulation_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'framework_io', 'background_dataobjects', '$ROOT_LIBS']
 
 Return('env')
