--- a/top/SConscript
+++ b/top/SConscript
@@ -1,7 +1,7 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'geometry', 'simulation', 'top_dataobjects',
-               'geometry_dbobjects', 'simulation_dataobjects', 'mdst_dataobjects', 
+               'geometry_dbobjects', 'mdst_dataobjects', 
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
 Return('env')
