--- a/top/modules/TOPDigitizer/SConscript
+++ b/top/modules/TOPDigitizer/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'top_dataobjects', 'simulation_dataobjects', 
-               'mdst_dataobjects', '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP','top']
+env['LIBS'] = ['framework', 'top_dataobjects',  
+               'mdst_dataobjects', 'top', '$ROOT_LIBS']
 
 Return('env')
