--- a/top/modules/TOPWFMerger/SConscript
+++ b/top/modules/TOPWFMerger/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'top_dataobjects', 'top', 'geometry_dbobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'top_dataobjects', 'top', '$ROOT_LIBS']
 
 Return('env')
