Added missing dependency.

--- a/tracking/modules/trackSetEvaluatorVXD/SConscript
+++ b/tracking/modules/trackSetEvaluatorVXD/SConscript
@@ -1,7 +1,8 @@
 Import('env')
 
 env['LIBS'] = [
-    'framework', 
+    'framework',
+    'svd_dataobjects',
     'tracking',
     'tracking_spacePointCreation_sptcNetwork']
 Return('env')
