--- a/mva/SConscript
+++ b/mva/SConscript
@@ -2,7 +2,7 @@ Import('env')
 
 env.ParseConfig("python3 -c 'import numpy; print(\"-I%s\" % numpy.get_include())'")
 
-env['LIBS'] = ['framework', 'framework_io', 'mva_dataobjects', 'boost_program_options', '$ROOT_LIBS', 'fann', 'libFastBDT_shared']
+env['LIBS'] = ['framework', 'framework_io', 'mva_dataobjects', 'boost_program_options', '$ROOT_LIBS', 'fann', 'FastBDT_shared']
 
 env.Append(LIBS = ['NeuroBayesExpertCPP'])
 env.Append(LIBS = ['NeuroBayesTeacherCPP'])
