--- a/calibration/SConscript
+++ b/calibration/SConscript
@@ -1,4 +1,4 @@
 Import('env')
-env['LIBS'] = ['framework', '$ROOT_LIBS', 'calibration_dataobjects', 'alignment_dataobjects', 'genfit2']
+env['LIBS'] = ['framework', '$ROOT_LIBS', 'calibration_dataobjects', 'alignment_dataobjects']
 Return('env')
 
