--- a/tracking/modules/trackTimeExtraction/SConscript
+++ b/tracking/modules/trackTimeExtraction/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
 env['LIBS'] = ['genfit2', 'framework', 'cdc_dataobjects', 'mdst_dataobjects',
-               'tracking_dataobjects']
+               'tracking_dataobjects', 'tracking', 'hlt_hlt_dataobjects']
 Return('env')
