Fixing a couple of build warnings

--- a/topcaf/modules/WaveTimingFastModule/SConscript
+++ b/topcaf/modules/WaveTimingFastModule/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'topcaf_dataobjects', 'top_dataobjects']
+env['LIBS'] = ['framework', 'topcaf_dataobjects']
 
 Return('env')
