--- a/topcaf/modules/PedestalModule/SConscript
+++ b/topcaf/modules/PedestalModule/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework','topcaf_dataobjects', '$ROOT_LIBS', 'libMinuit']
-	
+env['LIBS'] = ['framework','topcaf_dataobjects', '$ROOT_LIBS']
+
 Return('env')
