--- a/ecl/modules/MCMatcherECLClusters/SConscript
+++ b/ecl/modules/MCMatcherECLClusters/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
+env['LIBS'] = ['framework', 'ecl_dataobjects', 'mdst_dataobjects',
                '$ROOT_LIBS']
 
 Return('env')
