--- a/ecl/modules/eclDataAnalysis/SConscript
+++ b/ecl/modules/eclDataAnalysis/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects', 'CLHEP']
+env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'mdst_dataobjects', 'CLHEP']
 
 Return('env')
