--- a/ecl/modules/eclDigitizer/SConscript
+++ b/ecl/modules/eclDigitizer/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'simulation_dataobjects',
+env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects',
                '$ROOT_LIBS']
 
 Return('env')
