--- a/ecl/modules/eclHitDebug/SConscript
+++ b/ecl/modules/eclHitDebug/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
-               '$ROOT_LIBS']
+env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', '$ROOT_LIBS']
 
 Return('env')
