--- a/bklm/modules/bklmRawPacker/SConscript
+++ b/bklm/modules/bklmRawPacker/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'rawdata_dataobjects', 'bklm_dataobjects',
+env['LIBS'] = ['framework', 'rawdata_dataobjects', 'bklm_dataobjects', 'bklm_dbobjects',
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
 Return('env')
