--- a/cdc/SConscript
+++ b/cdc/SConscript
@@ -15,5 +15,6 @@ env['LIBS'] = ['framework', 'geometry', 'simulation', 'calibration',
 #env.Append(CPPDEFINES = {'CDC_CHMAP_FROM_DB':None})
 #env.Append(CPPDEFINES = {'CDC_DISPLACEMENT_FROM_DB':None})
 #env.Append(CPPDEFINES = {'CDC_ALIGN_FROM_DB':None})
+#env.Append(CPPDEFINES = {'CDC_MISALIGN_FROM_DB':None})
 
 Return('env')
