Minor change in py. Removed extra links from SConscript.

--- a/cdc/modules/cdcJobCntlParModifier/SConscript
+++ b/cdc/modules/cdcJobCntlParModifier/SConscript
@@ -1,6 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['cdc', 'framework','cdc_dataobjects',
-	      'mdst_dataobjects','$ROOT_LIBS']
+env['LIBS'] = ['cdc', 'framework','$ROOT_LIBS']
 
 Return('env')
