--- a/ecl/modules/eclShowerCorrection/SConscript
+++ b/ecl/modules/eclShowerCorrection/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'ecl_dbobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'ecl_dataobjects', 'ecl_dbobjects', '$ROOT_LIBS']
 
 Return('env')
