--- a/generators/SConscript
+++ b/generators/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'mdst_dataobjects', 'geometry', 'simulation_dataobjects', 'generators_SAD_dataobjects']
+env['LIBS'] = ['framework', 'mdst_dataobjects', 'geometry', 'generators_SAD_dataobjects']
 
 Return('env')
