--- a/ecl/modules/eclBackgroundStudy/SConscript
+++ b/ecl/modules/eclBackgroundStudy/SConscript
@@ -2,10 +2,10 @@ Import('env')
 
 if (FindFile('ARICHGeometryPar.cc', '../../../arich/geometry/src/')) is not "None":
    env.Append(CPPDEFINES=['DOARICH'])
-   env['LIBS'] = ['ecl', 'framework', 'arich', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
+   env['LIBS'] = ['framework', 'arich', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
                   'Geom', '$ROOT_LIBS']
 else:
-   env['LIBS'] = ['ecl', 'framework', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
+   env['LIBS'] = ['framework', 'ecl_dataobjects', 'simulation_dataobjects', 'mdst_dataobjects',
                   'Geom', '$ROOT_LIBS']
 
 Return('env')
