Enable DB objects in CDCs

--- a/cdc/SConscript
+++ b/cdc/SConscript
@@ -6,15 +6,15 @@ env['LIBS'] = ['framework', 'geometry', 'simulation', 'calibration',
 
 #env.Append(CPPDEFINES = {'CDC_DEBUG':None})
 
-#env.Append(CPPDEFINES = {'CDC_T0_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_BADWIRE_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_PROPSPEED_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_TIMEWALK_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_XTREL_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_SRESOL_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_CHMAP_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_DISPLACEMENT_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_ALIGN_FROM_DB':None})
-#env.Append(CPPDEFINES = {'CDC_MISALIGN_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_T0_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_BADWIRE_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_PROPSPEED_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_TIMEWALK_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_XTREL_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_SRESOL_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_CHMAP_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_DISPLACEMENT_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_ALIGN_FROM_DB':None})
+env.Append(CPPDEFINES = {'CDC_MISALIGN_FROM_DB':None})
 
 Return('env')
