--- a/tracking/trackFindingCDC/SConscript
+++ b/tracking/trackFindingCDC/SConscript
@@ -17,9 +17,8 @@ env['LIBS'] = [
     'TMVA',
     ]
 
-
-option = os.environ['BELLE2_OPTION']
-if option == "clang":
-    env.Append(CCFLAGS=['-Wdocumentation'])
+# option = os.environ['BELLE2_OPTION']
+# if option == "clang":
+#     env.Append(CCFLAGS=['-Wdocumentation'])
 
 Return('env')
