--- a/arich/dataobjects/SConscript
+++ b/arich/dataobjects/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'simulation_dataobjects', 'tracking_dataobjects']
+env['LIBS'] = ['framework', 'simulation_dataobjects']
 
 Return('env')
 
