--- a/arich/modules/arichDigitizer/SConscript
+++ b/arich/modules/arichDigitizer/SConscript
@@ -1,5 +1,5 @@
 Import('env')
  	
-env['LIBS'] = ['framework', 'simulation_dataobjects', 'arich_dataobjects', 'arich']
+env['LIBS'] = ['framework', 'arich_dataobjects', 'arich']
 
 Return('env')
