--- a/arich/modules/arichNtuple/SConscript
+++ b/arich/modules/arichNtuple/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'mdst_dataobjects', 
-               'arich_dataobjects', 'tracking_dataobjects', '$ROOT_LIBS']
+               'arich_dataobjects', '$ROOT_LIBS']
 
 Return('env')
