--- a/eklm/modules/EKLMDigitizer/SConscript
+++ b/eklm/modules/EKLMDigitizer/SConscript
@@ -1,5 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['eklm', 'framework', 'eklm_dataobjects', 'eklm_dbobjects',
+               '$ROOT_LIBS']
 
 Return('env')
