--- a/display/modules/display/SConscript
+++ b/display/modules/display/SConscript
@@ -4,7 +4,7 @@ env['LIBS'] = ['$ROOT_LIBS', 'display', 'framework', 'geometry',
                'tracking', 'vxd',
                'bklm_dataobjects', 'mdst_dataobjects', 'eklm_dataobjects',
                'pxd_dataobjects', 'svd_dataobjects', 'cdc_dataobjects',
-               'simulation_dataobjects', 'tracking_dataobjects',
+               'simulation_dataobjects', 'tracking_dataobjects', 'arich_dataobjects',
                'genfit2']
 
 Return('env')
