Added functions to add KLM hits to the reco track

--- a/tracking/dataobjects/SConscript
+++ b/tracking/dataobjects/SConscript
@@ -5,6 +5,8 @@ env['LIBS'] = [
     'pxd_dataobjects',
     'svd_dataobjects',
     'cdc_dataobjects',
+    'bklm_dataobjects',
+    'eklm_dataobjects',
     'mdst_dataobjects',
     'genfit2',
     '$ROOT_LIBS',
