updated to latest

--- a/daq/slc/data/database/example/copper.conf
+++ b/daq/slc/data/database/example/copper.conf
@@ -33,10 +33,10 @@ hslb[3].used         : false
 basf2.script         : daq/rawdata/examples/RecvSendCOPPER.py
 
 # FEE configuration (firmware and parameters etc.)
-fee[0]               : object(template:fee:cpr001:a:)
-fee[1]               : object(template:fee:cpr001:b:)
-fee[2]               : object(template:fee:cpr001:c:)
-fee[3]               : object(template:fee:cpr001:d:)
+fee[0].path          : db://template:fee:cpr001:a:
+fee[1].path          : db://template:fee:cpr001:b:
+fee[2].path          : db://template:fee:cpr001:c:
+fee[3].path          : db://template:fee:cpr001:d:
 
 #
 #
