--- a/daq/slc/data/config/cpr_template.conf
+++ b/daq/slc/data/config/cpr_template.conf
@@ -16,17 +16,13 @@ dbtable            : template
 # 
 #
 
-fee.a.lib          : libdaq_slc_copper_template.so
-fee.a.name         : TEMPLATE
+fee.lib          : libdaq_slc_copper_template.so
+fee.name         : TEMPLATE
 
-fee.b.lib          : libdaq_slc_copper_template.so
-fee.b.name         : TEMPLATE
-
-fee.c.lib          : libdaq_slc_copper_template.so
-fee.c.name         : TEMPLATE
-
-fee.d.lib          : libdaq_slc_copper_template.so
-fee.d.name         : TEMPLATE
+fee.a.used       : true
+fee.b.used       : true
+fee.c.used       : true
+fee.d.used       : true
 
 #
 #
