--- a/beast/SConscript
+++ b/beast/SConscript
@@ -10,7 +10,8 @@ env['LIBS'] = [
     'beast_pindiode_dataobjects', 'beast_csi_dataobjects',
     'beast_beamabort_dataobjects', 'beast_plume_dataobjects',
     'beast_claw_dataobjects', 'beast_qcsmonitor_dataobjects',
-    'beast_claws_dataobjects', 'beast_fangs_dataobjects'
+    'beast_claws_dataobjects', 'beast_fangs_dataobjects',
+    'beast_dosi_dataobjects'
 ]
 
 Return('env')
