--- a/daq/slc/SConscript
+++ b/daq/slc/SConscript
@@ -3,7 +3,7 @@ Import('env')
 import os
 
 #env['CONTINUE'] = True
-if not env.has_key('CONTINUE') or env['CONTINUE'] == False:
-   os.system("make -C ${BELLE2_LOCAL_DIR}/daq/slc/extra/nsm2/ install")
+#if not env.has_key('CONTINUE') or env['CONTINUE'] == False:
+#   os.system("make -C ${BELLE2_LOCAL_DIR}/daq/slc/extra/nsm2/ install")
 
 Return('env')
