CDCPacker is modified so to read the channel map from DB instead of text file. Also the unit test script is changed according to the update above.

--- a/cdc/modules/cdcPacker/SConscript
+++ b/cdc/modules/cdcPacker/SConscript
@@ -1,5 +1,3 @@
 Import('env')
-
-env['LIBS'] = ['rawdata_dataobjects', 'cdc_dataobjects', 'framework', '$ROOT_LIBS']
-
+env['LIBS'] = ['rawdata_dataobjects', 'cdc_dataobjects', 'cdc', 'framework', '$ROOT_LIBS']
 Return('env')
