--- a/cdc/modules/cdcRecoTrackFilter/SConscript
+++ b/cdc/modules/cdcRecoTrackFilter/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'cdc', 'cdc_dataobjects', 'genfit2','tracking_dataobjects', 'mdst_dataobjects', 'vxd']
+env['LIBS'] = ['framework', 'cdc_dataobjects', 'tracking_dataobjects']
 
 Return('env')
