modified db handler

--- a/daq/slc/data/config/slowcontrol.conf
+++ b/daq/slc/data/config/slowcontrol.conf
@@ -3,10 +3,10 @@
 # NSM configuration
 #
 
-nsm.host           : belle-rpc2.desy.de
+nsm.host           : b2slow2.kek.jp
 nsm.port           : 9122
-nsm.global.host    : belle-rpc2.desy.de
-nsm.global.port    : 8122
+#nsm.global.host    : b2slow2.kek.jp
+#nsm.global.port    : 8122
 nsm.data.incpath   : ${BELLE2_LOCAL_DIR}/daq/slc/data/nsm
 
 #
@@ -14,7 +14,7 @@ nsm.data.incpath   : ${BELLE2_LOCAL_DIR}/daq/slc/data/nsm
 #
 
 database.use       : true
-database.host      : belle-rpc2.desy.de
+database.host      : b2slow2.kek.jp
 database.port      : 5432
 database.dbname    : b2slow
 database.user      : b2daq
@@ -24,16 +24,16 @@ database.password  : b2daq
 # DB object provider configuration
 #
 
-provider.host      : belle-rpc2.desy.de
+provider.host      : b2slow2.kek.jp
 provider.port      : 20020
 
 #
 # configuration for log files
 #
 
-log.dir            : /user/b2daq/log
+log.dir            : ${HOME}/log
 log.collector      : LOGC
-log.dbtable        : logtest
+log.dbtable        : log
 
 #
 #
