Removal of sptc stuff from SConsripts

--- a/tracking/modules/trackSetEvaluatorVXD/SConscript
+++ b/tracking/modules/trackSetEvaluatorVXD/SConscript
@@ -3,6 +3,5 @@ Import('env')
 env['LIBS'] = [
     'framework',
     'svd_dataobjects',
-    'tracking',
-    'tracking_spacePointCreation_sptcNetwork']
+    'tracking']
 Return('env')
