--- a/top/modules/TOPBackground/SConscript
+++ b/top/modules/TOPBackground/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'top_dataobjects', 
+env['LIBS'] = ['framework', 'top_dataobjects', 'top', 'geometry',
                'mdst_dataobjects', 'simulation_dataobjects',
                '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
 
