--- a/tracking/modules/trackFinderMCTruth/SConscript
+++ b/tracking/modules/trackFinderMCTruth/SConscript
@@ -6,6 +6,7 @@ env['LIBS'] = [
     'mdst_dataobjects',
     'pxd_dataobjects',
     'svd_dataobjects',
+    'top_dataobjects',
     'cdc', 'cdc_dataobjects',
     'genfit2',
     'tracking_dataobjects',
