Added the BKLM and EKLM hits to the fitting procedure. During this, I have reordered the parameters for most of the functions.

--- a/tracking/SConscript
+++ b/tracking/SConscript
@@ -4,6 +4,7 @@
 Import('env')
 
 env['LIBS'] = [
+    'alignment',
     'tracking_dataobjects',
     'pxd', 'pxd_dataobjects',
     'svd', 'svd_dataobjects',
