Remove rawdata from rawdata/modules/SConsripts.

--- a/rawdata/modules/SConscript
+++ b/rawdata/modules/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = [ 'framework', 'rawdata', 'rawdata_dataobjects' ]
+env['LIBS'] = [ 'framework', 'rawdata_dataobjects' ]
 
 Return('env')
 
