Last-minute fixes of pxd: lib dependencies, comp warnings etc.
Signed-off-by: Peter Kvasnicka <kvasnicka@ipnp.troja.mff.cuni.cz>

--- a/pxd/modules/pxdDQM/SConscript
+++ b/pxd/modules/pxdDQM/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['pxd', 'vxd', 'rawdata_dataobjects', 'pxd_dataobjects', 'vxd_dataobjects', 'framework']
+env['LIBS'] = ['vxd', 'rawdata_dataobjects', 'pxd_dataobjects', 'framework']
 
 
 Return('env')
