--- a/pxd/SConscript
+++ b/pxd/SConscript
@@ -1,6 +1,7 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'geometry', 'simulation', 'simulation_dataobjects', 'genfit2',
-               '$ROOT_LIBS', 'vxd','vxd_dataobjects', 'pxd_dataobjects', 'mdst_dataobjects', 'alignment_dataobjects', 'calibration', 'calibration_dataobjects']
+env['LIBS'] = ['framework', 'geometry', 'simulation', 'genfit2', '$ROOT_LIBS', 
+  'vxd','vxd_dataobjects', 'pxd_dataobjects', 'mdst_dataobjects', 'calibration', 
+  'calibration_dataobjects']
 
 Return('env')
