--- a/pxd/modules/pxdClusterShapeCalibration/SConscript
+++ b/pxd/modules/pxdClusterShapeCalibration/SConscript
@@ -1,7 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework','geometry', 'genfit2', 'alignment_dataobjects', 
-'calibration', 'calibration_dataobjects', 'vxd', 'vxd_dataobjects', 
-'pxd', 'pxd_dataobjects', 'svd', 'svd_dataobjects']
+env['LIBS'] = ['framework', 'genfit2','calibration', 'calibration_dataobjects', 'vxd',  
+'pxd', 'pxd_dataobjects']
 
 Return('env')
