--- a/pxd/modules/pxdSimulation/SConscript
+++ b/pxd/modules/pxdSimulation/SConscript
@@ -1,5 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['vxd', 'vxd_dataobjects', 'pxd', 'pxd_dataobjects', 'framework', 'simulation_dataobjects', 'mdst_dataobjects']
+env['LIBS'] = ['vxd', 'vxd_dataobjects', 'pxd', 'pxd_dataobjects', 
+  'framework', 'mdst_dataobjects']
 
 Return('env')
