Last-minute fixes of svd: lib dependencies, compiler warnings etc.
Signed-off-by: Peter Kvasnicka <kvasnicka@ipnp.troja.mff.cuni.cz>

--- a/svd/SConscript
+++ b/svd/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'geometry', 'simulation', 'simulation_dataobjects',
+env['LIBS'] = ['framework', 'geometry', 'simulation', 
 		'genfit2', '$ROOT_LIBS', 'Geom', 'vxd','vxd_dataobjects',
 		'svd_dataobjects', 'mdst_dataobjects']
 
