--- a/svd/modules/svdBackground/SConscript
+++ b/svd/modules/svdBackground/SConscript
@@ -1,5 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['vxd','vxd_dataobjects', 'svd', 'svd_dataobjects', 'framework', 'simulation', 'simulation_dataobjects', 'mdst_dataobjects', 'background_dataobjects']
+env['LIBS'] = ['vxd','vxd_dataobjects', 'svd', 'svd_dataobjects', 'framework', 
+  'simulation_dataobjects', 'mdst_dataobjects', 'background_dataobjects']
 
 Return('env')
