--- a/svd/modules/svdDump/SConscript
+++ b/svd/modules/svdDump/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['rawdata', 'svd', 'rawdata_dataobjects', 'vxd_dataobjects', 'svd_dataobjects', 'framework']
+env['LIBS'] = ['rawdata_dataobjects', 'framework']
 
 Return('env')
