Last-minute changes in vxd: lib dependencies, compiler warnings etc.
Signed-off-by: Peter Kvasnicka <kvasnicka@ipnp.troja.mff.cuni.cz>

--- a/vxd/modules/vxdMisalignment/SConscript
+++ b/vxd/modules/vxdMisalignment/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'vxd', 'vxd_dataobjects', '$ROOT_LIBS']
+env['LIBS'] = ['framework', 'vxd', '$ROOT_LIBS']
 
 Return('env')
