--- a/analysis/modules/NtupleMaker/SConscript
+++ b/analysis/modules/NtupleMaker/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
-env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_DecayDescriptor', 'analysis_NtupleTools']
+env['LIBS'] = ['framework', 'analysis_dataobjects', 'analysis_DecayDescriptor', 'analysis_NtupleTools', 'analysis_utility']
 
 Return('env')
 
