Handle BackgroundInfo when merging files (BII-1930)
This adds special handling when merging files containing background
information:

- check that the BackgroundInfo objects are present in all or no files
- check that they are all identical except for the reused counter
- sum up the reused counter and increment by (n-1) where n is the number of files

All the code added to the merge tool by this commit should be removed and the
BackgroundInfo class should implement the merging on its own and inherit from
Mergeable (raising an exception if some aspects cannot be merged). These are
minimal invasive changes to be included in release-00-08-00.

--- a/framework/tools/SConscript
+++ b/framework/tools/SConscript
@@ -9,6 +9,6 @@ env['TOOLS_LIBS']['showmetadata'] = ['$XML_LIBS', 'framework', 'boost_program_op
 env['TOOLS_LIBS']['addmetadata'] = ['$XML_LIBS', 'framework', 'boost_program_options', '$ROOT_LIBS']
 
 env['TOOLS_LIBS']['addtocatalog'] = ['$XML_LIBS', 'framework', 'boost_program_options', '$ROOT_LIBS']
-env['TOOLS_LIBS']['merge_basf2_files'] = ['framework_io', 'framework', 'boost_program_options', '$ROOT_LIBS']
+env['TOOLS_LIBS']['merge_basf2_files'] = ['background_dataobjects', 'framework_io', 'framework', 'boost_program_options', '$ROOT_LIBS']
 
 Return('env')
