--- a/alignment/modules/MillepedeCollector/SConscript
+++ b/alignment/modules/MillepedeCollector/SConscript
@@ -2,6 +2,6 @@ Import('env')
 
 env['LIBS'] = ['framework', 'genfit2', 'calibration', '$ROOT_LIBS',
                'alignment_dataobjects', 'calibration_dataobjects',
-               'analysis_dataobjects', 'mdst_dataobjects', 'alignment']
+               'analysis_dataobjects', 'mdst_dataobjects', 'alignment', 'tracking_dataobjects', 'tracking']
 
 Return('env')
