Fixed library dependencies in vxd packages

--- a/testbeam/vxd/modules/telReconstruction/SConscript
+++ b/testbeam/vxd/modules/telReconstruction/SConscript
@@ -1,5 +1,5 @@
 Import('env')
 
-env['LIBS'] = ['vxd','testbeam', 'vxd_dataobjects', 'testbeam_vxd_dataobjects', 'pxd_dataobjects', 'framework', 'mdst_dataobjects', 'pxd']
+env['LIBS'] = ['vxd','testbeam', 'vxd_dataobjects', 'testbeam_vxd_dataobjects', 'framework', 'mdst_dataobjects', 'pxd']
 
 Return('env')
