--- a/beast/SConscript
+++ b/beast/SConscript
@@ -2,7 +2,7 @@ Import('env')
 
 #These are the libraries the awesome package has to be linked against
 env['LIBS'] = [
-    'framework', 'simulation', 'simulation_dataobjects', 'mdst_dataobjects',
+    'framework', 'simulation', 'mdst_dataobjects',
     'geometry', '$ROOT_LIBS', 'beast_microtpc_dataobjects',
     'beast_bgo_dataobjects', 'beast_ph1bpipe_dataobjects',
     'beast_cave_dataobjects', 'beast_ph1sustr_dataobjects',
