--- a/bklm/modules/bklmTracking/SConscript
+++ b/bklm/modules/bklmTracking/SConscript
@@ -1,6 +1,6 @@
 Import('env')
 
 env['LIBS'] = ['framework', 'bklm', 'bklm_dataobjects', ### 'bklm_dbobjects',
-               '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP']
+               '$ROOT_LIBS', '$GEANT4_LIBS', 'CLHEP', 'tracking_dataobjects', 'genfit2']
 
 Return('env')
