--- a/pxd/reconstruction/tools/SConscript
+++ b/pxd/reconstruction/tools/SConscript
@@ -1,3 +1,4 @@
 Import('env')
 env['TOOLS_LIBS']['tryPXDCalibMap'] = ['pxd_dataobjects', '$ROOT_LIBS']
+env['TOOLS_LIBS']['tryUID'] = ['vxd_dataobjects']
 Return('env')
