Updated from ARICH DAQ development

--- a/daq/slc/hvcontrol/template/tools/Makefile
+++ b/daq/slc/hvcontrol/template/tools/Makefile
@@ -8,8 +8,8 @@ INCDIR  = $(BELLE2_DAQ_SLC)/include
 TMPDIR  = $(BELLE2_DAQ_SLC)/tmp
 LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 
-LIBS    += -lm -lpthread -ldl -lrt -lreadline -lncurses -L$(PGSQL_LIB_PATH) -lpq -lz
-LIBS    += -L$(LIBDIR) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_psql -ldaq_slc_nsm -ldaq_slc_hvcontrol -ldaq_slc_hvcontrol_template
+LIBS    += -lm -lpthread -ldl -lrt -lreadline -lncurses -L$(PGSQL_LIB_PATH) -lpq
+LIBS    += -L$(LIBDIR) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_nsm -ldaq_slc_hvcontrol -ldaq_slc_hvcontrol_template
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
 
 CFLAGS   = -g -Wall -fPIC -D_REENTRANT -I$(PGSQL_INC_PATH)
