--- a/daq/slc/apps/nsm2socket/tools/Makefile
+++ b/daq/slc/apps/nsm2socket/tools/Makefile
@@ -13,7 +13,7 @@ TMPDIR  = $(BELLE2_DAQ_SLC)/tmp
 LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 
 LIBS    += -lm -lpthread -ldl -lrt
-LIBS    += -L$(BELLE2_LIB) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_psql -ldaq_slc_nsm -ldaq_slc_apps_nsm2socket
+LIBS    += -L$(BELLE2_LIB) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_psql -ldaq_slc_nsm -ldaq_slc_runcontrol -ldaq_slc_apps_nsm2socket
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
 LIBS    += -L$(PGSQL_LIB_PATH) -lpq
 
