Fixed Link path

--- a/daq/slc/apps/rctemplated/tools/Makefile
+++ b/daq/slc/apps/rctemplated/tools/Makefile
@@ -9,7 +9,8 @@ TMPDIR  = $(BELLE2_DAQ_SLC)/tmp
 LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 
 LIBS    += -lm -lpthread -ldl -lrt 
-LIBS    += -L$(LIBDIR) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_nsm -ldaq_slc_runcontrol -ldaq_slc_apps_rctemplated
+LIBS    += -L$(LIBDIR) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database -ldaq_slc_nsm \
+	-ldaq_slc_psql -ldaq_slc_runcontrol -ldaq_slc_apps_rctemplated
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
 ifneq ($(NOT_USE_PSQL),yes)
 LIBS    += -L$(LIBDIR) -ldaq_slc_psql -L$(PGSQL_LIB_PATH) -lpq
@@ -18,7 +19,7 @@ endif
 CFLAGS   = -g -Wall -fPIC -D_REENTRANT
 CFLAGS  += -I$(BELLE2_DAQ_SLC)/include -I.
 ifneq ($(NOT_USE_PSQL),yes)
-CFLAGS  += -$(PGSQL_INC_PATH) -lpq
+CFLAGS  += -L$(PGSQL_INC_PATH) -lpq
 endif
 
 MAINS   = $(wildcard *.cc)
