--- a/daq/slc/apps/ttctrld/Makefile
+++ b/daq/slc/apps/ttctrld/Makefile
@@ -1,11 +1,11 @@
-all: copyinc apps/ttdad
+all: copyinc apps/ttctrld
 
 INCDIR=$(BELLE2_DAQ_SLC)/include/daq/slc/
 
 copyinc:
-	@ mkdir -p $(INCDIR)/apps/ttdad
-	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ttdad/include/* $(INCDIR)/apps/ttdad
+	@ mkdir -p $(INCDIR)/apps/ttctrld
+	@  install -m 644 -p $(BELLE2_DAQ_SLC)/apps/ttctrld/include/* $(INCDIR)/apps/ttctrld
 
-apps/ttdad: %:
+apps/ttctrld: %:
 	@ make -C $(BELLE2_DAQ_SLC) -f Makefile.src TARGET=$@ 
 	@ if [ -f ./tools/Makefile ]; then make -C ./tools; fi
