--- a/daq/slc/apps/ttctrld/tools/Makefile
+++ b/daq/slc/apps/ttctrld/tools/Makefile
@@ -16,9 +16,9 @@ LIBDIR  = $(BELLE2_DAQ_SLC)/lib
 
 LIBS    += -lm -lpthread -ldl -lrt -lvme
 LIBS    += -L$(BELLE2_LIB) -ldaq_slc_base -ldaq_slc_system -ldaq_slc_database \
- -ldaq_slc_nsm -ldaq_slc_runcontrol -ldaq_slc_readout -ldaq_slc_apps_ttdad
+ -ldaq_slc_nsm -ldaq_slc_runcontrol -ldaq_slc_readout -ldaq_slc_apps_ttctrld
 LIBS    += -lnsm2_corelib -lnsm2_b2lib
-LIBS    += -L$(BELLE2_DAQ_SLC)/extra/ftprogs/ -lstatft
+LIBS    += -L$(BELLE2_DAQ_SLC)/extra/ftprogs/ -lftprogs2
 
 CFLAGS   = -g -Wall -fPIC -D_REENTRANT -DSTATFT_NSM
 CFLAGS  += -I$(BELLE2_DAQ_SLC)/include -I.
